	* Fixed evas_object_image_is_inside() implementation.

2012-12-19  Carsten Haitzler (The Rasterman)

        * Fixed 24bpp issue with rendering in evas. It shows itself
        only under qemu/kvm with the cirruse driver that I have found.
        In this case the screen is really 24bpp packed and this case
        just never comes up on any vaguely modern gfx system.

2012-12-21  Stefan Schmidt

        * Fix small memory leak in evas_bidi_utils error path

2012-12-21  Luis Felipe Strano Moraes

	* 1.7.4 release

2013-01-02  Carsten Haitzler (The Rasterman)

        * Fixed evas_software_xlib_x_write_mask_line() issue - it was
        finding a segment in the shm cache of the wrong size for masks!

2013-01-04  Luis Felipe Strano Moraes

	* 1.7.5 release

2013-01-05  Joel Klinghed

        * fribidi header include path fix.

2013-01-07  Thomas Petazzoni

	* Fix build of Evas XCB backend.

2013-01-09  Jiyoun Park (jypark)

	* Fix evas bmp loader code which deal with image size.

2013-01-11  Cedric Bail

	* Fix not up to date clip cache for Evas_Object_Text.

2013-01-11  Tom Hacohen (TAsn)

	* Static libs: Updated liblinebreak to libunibreak's latest version.
	* Evas texblock: Fixed a bug with breaking after format items.

2013-01-14  Tom Hacohen (TAsn)

       * Evas textblock: Fixed issue with line height when breaking on a
       format.

2013-01-15  ChunEon Park (Hermet) <hermet@hermet.pe.kr>

        * Fix SIGFPE in evas map update if image size is 0.

2013-01-15  Tom Hacohen (TAsn)

	* Evas texblock: Fixed issue and simplified cursor_geometry_get.
	* Evas text: Fixed issue with horiz advance.
	* Evas text utils: Fixed issue with no-harfbuzz bidi.

2013-01-16  Carsten Haitzler (The Rasterman)

        * Fixed pixman image wrapping to handle allocated size instead
        of image size (unless allocated is 0/wrong).

2013-02-19 Daniel Zaoui

        * Fix Evas_Object_Text when LTR and RTL are used in the same
        paragraph.