@@ -1265,3 +1265,9 @@
 
         * Fix Evas_Object_Text when LTR and RTL are used in the same
         paragraph.
+
+2013-04-04  Yakov Goldberg
+
+        * Evas font: char position, returned by
+          evas_common_font_query_char_at_coords(),
+          depends on left/right half of char and its direction.
